kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arvis-booking
  labels:
    name: arvis-booking
    environment: production
